Fix mobile layout issues

--- a/wp-content/themes/mmd/app/assets/styles/modules/_content-area.css
+++ b/wp-content/themes/mmd/app/assets/styles/modules/_content-area.css
@@ -20,6 +20,10 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      opacity: 0.3;
+      @mixin atMedium {
+        opacity: 1;
+      }
     }
   }
 
@@ -28,6 +32,7 @@
     grid-row: 1;
     width: 80%;
     margin: auto;
+    z-index: 1;
   }
 
   &__section {
